# tinyml-federated

./: .gitignore  LICENSE.txt  README.md
federated-simulation/: CMakeLists.txt  README.md
federated-simulation/data/: motion_metadata.csv
federated-simulation/data/motion_data/: recording_0000.csv  recording_0001.csv  recording_0002.csv  recording_0003.csv  recording_0004.csv  recording_0005.csv  recording_0006.csv  recording_0007.csv  recording_0008.csv  recording_0009.csv  recording_0010.csv  recording_0011.csv  recording_0012.csv  recording_0013.csv  recording_0014.csv  recording_0015.csv  recording_0016.csv  recording_0017.csv  recording_0018.csv  recording_0019.csv  recording_0020.csv  recording_0021.csv  recording_0022.csv  recording_0023.csv  recording_0024.csv  recording_0025.csv  recording_0026.csv  recording_0027.csv  recording_0028.csv  recording_0029.csv  recording_0030.csv  recording_0031.csv  recording_0032.csv  recording_0033.csv  recording_0034.csv  recording_0035.csv  recording_0036.csv  recording_0037.csv  recording_0038.csv  recording_0039.csv  (+300 more)
federated-simulation/include/DataLoader/: DataLoader.h
federated-simulation/include/DataPreprocessor/: DataPreprocessor.h
federated-simulation/include/FeatureExtractor/: FeatureExtractor.h
federated-simulation/include/FederatedClient/: FederatedClient.h
federated-simulation/include/FederatedServer/: FederatedServer.h
federated-simulation/include/FederatedSimulation/: FederatedSimulation.h
federated-simulation/include/Metrics/: Metrics.h
federated-simulation/src/: main.cpp  main_hpo.cpp
(+34 files in other folders)
